[package]
name = "rsbalance"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
strip = "debuginfo"
panic = "abort"

[dependencies]
aes = "0.8.1"
anyhow = "1.0.89"
base32 = "0.5.1"
base64 = "0.22.1"
chrono = "0.4.38"
cipher = "0.4.4"
clap = { version = "4.5.18", features = ["derive", "env"] }
ctr = "0.9.2"
ed25519-dalek = { version = "2.1.1", features = ["pem"] }
hex = "0.4.3"
hmac = "0.12.1"
lazy_static = "1.5.0"
log = "0.4.22"
log4rs = "1.3.0"
num-bigint = "0.4.6"
num-traits = "0.2.19"
rand = "0.8.5"
rand_chacha = "0.3.1"
regex = "1.10.6"
serde = { version = "1.0.144", features = ["derive"] }
serde_yaml = "0.9.33"
sha2 = "0.10.8"
sha3 = "0.10.8"
tokio = { version = "1.40.0", features = ["full"] }
tor-checkable = "0.23.0"
tor-llcrypto = { version = "0.23.0", features = ["hsv3-client"] }
tor-netdoc = { version = "0.23.0", features = ["dangerous-expose-struct-fields"] }
x509-parser = "0.16.0"
yaml-rust = "0.4.5"